<resources>
    <string name="app_name">bookstore</string>
    <string name="app_tagLine">Your one stop solution  to Buy and sell books</string>
    <string name="getStarted">get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterName">Enter your name</string>
    <string name="enter_phone_no">Enter your phone number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_descrip">We have sent it to </string>
    <string name="why_location_info">We use it to help you connect with best buyer/seller</string>
    <string name="next">next</string>
    <string name="home">home</string>
    <string name="favourites">favourites</string>
    <string name="notifications">notifications</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="addListing">add listing</string>
    <string-array name="city_names">
        <item>Mumbai</item>
        <item>Chennai</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Calcutta</item>
        <item>Noida</item>
    </string-array>
    <string-array name="subject_names">
        <item>Electrical and Electronics</item>
        <item>Electronic and Communications</item>
        <item>Electronic and Instrumentations</item>
        <item>Mechanical Engineering</item>
        <item>Chemical Engineering</item>
        <item>Computer Science Engineering</item>
    </string-array>
    <string-array name="class_names">
        <item>1st year</item>
        <item>2nd year</item>
        <item>3rd year</item>
        <item>4th year</item>

    </string-array>

    <!--    Create Listing-->
    <string name="enterBookName"> Enter Book Name</string>
    <string name="authorName"> Enter Author Name </string>
    <string name="bookSubject"> Which subject is this book related to? </string>
    <string name="bookClass"> For which Class is this book recommendable</string>
    <string name="bookPrice"> Put price to sell</string>
    <string name="bookDescription"> Give a short Description of book</string>
    <string name="bookCondition"> Rate condition of book </string>


    <!--    Home Page-->
    <string name="notify"> Notify seller </string>
</resources>