<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListing.Fragments.CreateListingStep5Fragment"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookPrice"
        android:textSize="@dimen/text_large"
        android:gravity="left"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_16pts"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16pts"
        android:gravity="left"
        android:imeOptions="actionDone"
        android:inputType="bookPrice"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookDescription"
        android:textSize="@dimen/text_large"
        android:gravity="left"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin_16pts"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16pts"
        android:layout_marginTop="@dimen/margin_16pts"
        android:gravity="left"
        android:imeOptions="actionDone"
        android:inputType="book Description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginHorizontal="@dimen/margin_16pts"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_gravity="center_horizontal"

        android:textColor="@color/white"
        android:enabled="true"

        />



</LinearLayout>