<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListing.Fragments.CreateListingStep1Fragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_16pts"
    >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/enterBookName"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginBottom="@dimen/margin_large"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:background="@android:color/transparent"
        android:hint="Ex. Concepts of Physics"
        />

    <TextView
        android:layout_marginTop="@dimen/margin_large"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/authorName"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:background="@android:color/transparent"
        android:hint="Ex. Hc verma"
        />


    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginHorizontal="@dimen/margin_16pts"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:enabled="true"



        />

</LinearLayout>