<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.Fragments.Step3Fragment"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textSize="@dimen/text_large"
        android:gravity="center_horizontal"
        android:textColor="@color/black"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_descrip"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9094495400"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="5dp"

            />
    </LinearLayout>

    <EditText
        android:layout_marginTop="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_large"
        android:textColor="@color/black"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="resend OTP"
        android:textColor="@color/colorPrimary"


        />
    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_16pts"
        android:text="@string/next"
        android:textColor="@color/white"



        />

</LinearLayout>